<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_background"
    tools:context="com.ellixar.app.customer.sembe.customerapp.LoginActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/add_a_business"
        android:textAlignment="center"
        android:textColor="@color/textTabBright"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/reg_business_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:fontFamily="@font/nunito_semibold"
        android:hint="@string/business_name"
        android:inputType="textEmailAddress"
        android:paddingBottom="8dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:textColorHighlight="@color/textTabBright"
        android:textColorLink="@color/textTabBlue"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/reg_business_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_business_name"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:fontFamily="@font/nunito_semibold"
        android:hint="@string/business_phone"
        android:inputType="phone"
        android:paddingBottom="8dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:textColorHighlight="@color/textTabBright"
        android:textColorLink="@color/textTabBlue"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/reg_business_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_business_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:fontFamily="@font/nunito_semibold"
        android:hint="@string/business_location"
        android:inputType="textAutoComplete"
        android:paddingBottom="8dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:textColorHighlight="@color/textTabBright"
        android:textColorLink="@color/textTabBlue"
        android:textSize="16sp"
        android:focusable="false"/>

    <Button
        android:id="@+id/button_register_business"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_business_location"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_background"
        android:fontFamily="@font/nunito_semibold"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/create_a_business"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_register_business"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/nunito_semibold"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/login_progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
