<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ellixar.app.customer.sembe.customerapp.PlaceOrderActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_view">
        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/place_order"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/miniheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/add_items_to_order_by_clicking_them_from_the_list_below"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="10sp"
            android:layout_below="@+id/header"/>

        <Button
            android:id="@+id/button_view_single_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_border"
            android:fontFamily="@font/nunito_semibold"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/view_order"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:layout_below="@+id/miniheader"/>

    </RelativeLayout>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_view">
        <com.ellixar.app.customer.sembe.customerapp.ui.ExpandableHeightGridView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f2f2f2"
            android:horizontalSpacing="1dp"
            android:isScrollContainer="false"
            android:numColumns="2"
            android:stretchMode="columnWidth"
            android:verticalSpacing="1dp"/>
    </android.support.v4.widget.NestedScrollView>




    <ProgressBar
        android:id="@+id/login_progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
